2005-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CheckBox.cs: add possible 'internal' attributes to the input tag. Fix
	the 'name' attribute when not aligninng to the right.
	* RadioButton.cs: use NameAttribute instead of GroupName when indexing
	the collection. Raise the OnCheckedChanged event. Fixes bug #76710.

2005-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGrid.cs: clear the control collection on every call to
	CreateControlHierarchy. Fixes bug #76732.

2005-11-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListBox.cs: Rows and SelectionMode are virtual in 1.1

2005-11-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CheckBox.cs: use the NameAttribute property for setting 'name'.
	* RadioButton.cs: get a UniqueID based identifier for 'name'.
	Fixes bug #76710.

2005-11-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LinkButton.cs: don't output any javascript when the linkbutton is
	disabled. Fixes bug #76713.

2005-11-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGrid.cs: use TableHeaderCell instead of TableCell for headers when
	UseAccesibleHeader property is true. Patch by Robert Jordan.

2005-11-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseValidator.cs: 'controltovalidate' must be the ClientID of the
	control to validate. Fixes bug #76641.

2005-11-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BoundColumn.cs: when the column is readonly and we're in edit mode,
	keep it as a TextBox. Fixes bug #76714.

2005-11-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListBox.cs: render the 'onchange' attribute when AutoPostback is
	enabled. Fixes bug #76608.

2005-11-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CheckBox.cs: AddAttributesToRender was extra in 1.1, so moved all
	the logic to Render and make it render the ID, which fixes bug #76596.

2005-10-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Repeater.cs: someone forgot the curly brackets. Fixes bug 76537.
